<resources>
    <string name="app_name">Cover</string>

    <string name="your_address">What\'s your address?</string>
    <string name="address_hint">Please input your address</string>
    <string name="current_insurer">Who\'s your current insurer?</string>
    <string name="insurer_hint">Please input your insurance carrier</string>
    <string name="error_reminder">Please select one to continue</string>
    <string name="powered_by_google">powered by Google</string>
    <string name="next_button">Next</string>
</resources>
